2002-08-28  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-edit.el (mime-edit-user-agent-value): Add
	`xemacs-extra-name'.

2001-07-31  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* mime-edit.el (mime-edit-translate-body): Revert; insert
	User-Agent field.
	(mime-edit-insert-user-agent-field): Revert docstring.

2001-06-28  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* mime-edit.el (mime-edit-translate-body): Don't insert User-Agent
	field.
	(mime-edit-insert-user-agent-field): Changed default value to nil;
	Fixed docstring.

2000-11-29  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-edit.el (mime-edit-guess-charset): New function.
	(mime-edit-insert-file): Call it.

2000-10-19  Takanori Saneto  <sanewo@ba2.so-net.ne.jp>

	* pgg-pgp.el (pgg-pgp-process-region): bind process-environment
	locally so that setenv's effect won't last forever.
	pgg-pgp5.el (pgg-pgp5-process-region): Ditto.

2000-10-16  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* mime-edit.el (mime-edit-process-multipart-1): Typo fix
	(mime-edit-beginning-tag-regxp).

2000-10-16  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* EMY 1.13.9 is released.

2000-10-13  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-edit.el (mime-edit-force-text-tag): New macro.
	* mime-edit.el (mime-edit-insert-text-file):
	* mime-edit.el (mime-edit-insert-external):
	* mime-edit.el (mime-edit-insert-binary-string):
	* mime-edit.el (mime-edit-insert-binary-file):
	* mime-edit.el (mime-edit-process-multipart-1):
	* mime-edit.el (mime-edit-normalize-body):
	* mime-edit.el (mime-edit-enclose-region-internal):
	* mime-edit.el (mime-edit-insert-key): Use mime-edit-force-text-tag.

2000-10-12  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-edit.el (mime-edit-insert-insert-binary-string): Don't
	make a blank only part.
	(mime-edit-insert-binary-file): Ditto.
	(mime-edit-insert-text-file): Ditto.

2000-10-10  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-edit.el (mime-edit-insert-place): Barf if on invisible region.
	(mime-edit-insert-tag): Ditto.
