@@ -1,3 +1,12 @@
+2002-11-03  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>
+
+	* mime-edit.el (mime-edit-decode-single-part-in-buffer): Decode text
+	part only.
+
+2002-04-16   Daiki Ueno  <ueno@unixuser.org>
+
+	* mime-edit.el (mime-file-types): Add setting of *.jpeg for image/jpeg.
+
 2002-08-28  Katsumi Yamaoka   <yamaoka@jpl.org>
 
 	* mime-edit.el (mime-edit-user-agent-value): Add
